<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bscan</string>
    <string name="None_found">None found</string>
    <string name="Select_device">Select device</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <!-- 
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
 -->
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    
    <!--  -->
    <string name="intro">Bscan is an tool to verify the Bluetooth status
    	of the device and explore the surroundings for Bluetooth devices.
    	By giangiammy@gmail.com</string>
    <string name="is_bt_hw_supported">Is Bluetooth hardware supported?</string>
    <string name="is_bt_sw_supported">Is Bluetooth enabled?</string>
    <string name="button_enablehw">Enable Bluetooth</string>
    <string name="button_explore">Explore!</string>
    <string name="no_bluetooth_hardware">Bluetooth hardware not present</string>
    <string name="yes_bluetooth_hardware">Bluetooth hardware is present</string>
    <string name="no_bluetooth_enabled">Bluetooth is not enabled</string>
    <string name="yes_bluetooth_enabled">Bluetooth is enabled</string>
    <string name="selected_mac">Currently selected MAC</string>
        
</resources>
